refactor(main-server): alter api paths
